--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
 
-<div>
+<div class="p-5">
     <section>
         <div>
             <h1>{{name}}</h1>
@@ -25,7 +25,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Education' big=true}}
         <div>
@@ -44,7 +44,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Notable publications' big=false}}
         <div>
@@ -62,7 +62,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Partners' big=false}}
         <div>
@@ -80,7 +80,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Awards' big=false}}
         <div>
@@ -98,7 +98,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Influences' big=false}}
         <div>
@@ -111,7 +111,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Influenced' big=false}}
         <div>
@@ -124,7 +124,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Quotes' big=false}}
         <div>
@@ -137,7 +137,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Major discoveries' big=false}}
         <div>
@@ -154,7 +154,7 @@
             </ul>
         </div>
     </section>
-    <hr>
+    <hr class="my-4">
     <section>
         {{> title data='Contributions' big=false}}
         {{#with contributions}}
